fix: adjust userAvatar alignment

--- a/static/css/wrtcRoom.css
+++ b/static/css/wrtcRoom.css
@@ -262,7 +262,7 @@
 .wrtc_roomInlineAvatar {
 	position: absolute;
 	width: 156px;
-	margin-top: 8px
+	margin-top: 14px
 }
 
 
